# toga-mylocale

./: pyproject.toml
toga_mylocale/: toga-mylocale.py
